# rust-base

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
.devcontainer/: devcontainer.json  postCreate.sh
src/: error.rs  main.rs
src/froms/: mod.rs
templates/: main.askama
