[package]
name = "rust-base"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
askama = { version = "0.12.1", features = ["with-actix-web"] }
clap = "4.5.15"
serde = { version = "1.0.206", features = ["derive"] }
serde_json = "1.0.122"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["full"] }

[dev-dependencies]
anyhow = "1.0.86"
